# wtp_pilot

./: .gitignore  pyproject.toml
Notebooks/: ancillary.ipynb  competitors.ipynb  google_serper_test.ipynb  mockData_demo.ipynb  mockDemandData_demo.ipynb  mockFlightInfo_demo.ipynb  similarity.ipynb
wtp_pilot/: Untitled.ipynb
wtp_pilot/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
wtp_pilot/app/: dashboard.py  dashboard2.py  dashboard3.py  dashboard_final.py  demo_app.py  demo_app_calendar.py  demo_app_v2.py  test.py  test_rubish.py  utils.py
wtp_pilot/config/: config_readme.toml
wtp_pilot/inputs/: WTP_WOY.csv  wtp_mock_data.csv  wtp_mock_data2.csv  wtp_mock_data3.csv  wtp_mock_data4.csv
wtp_pilot/lib/bid_price/: bid_price_generator.py
wtp_pilot/lib/flight_price_scraping/: data_scrape.py  utils.py
