[tool.poetry]
name = "wtp-pilot"
version = "0.1.0"
description = ""
authors = ["hani-insiteai <hani@insite.ai>"]
readme = "README.md"
packages = [{include = "wtp_pilot"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.18.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
plotly = "^5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
